[project]
name = "buildbot-slack"
version = "0.3.0"
description = "buildbot plugin for integration with Slack."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Norman Denayer", email = "denayer.norman@gmail.com"},
]
requires-python = ">=3.8"
dependencies = [
    "buildbot>=4.0.0,<5.0.0",
    "treq>=25.0,<26.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/rockwelln/buildbot-slack"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["buildbot_slack"]

[project.entry-points."buildbot.reporters"]
SlackStatusPush = "buildbot_slack.reporter:SlackStatusPush"

[dependency-groups]
dev = [
    "black",
    "pytest",
    "ruff>=0.15.20",
]
